--- a/src/styles/components/Profile.css
+++ b/src/styles/components/Profile.css
@@ -1,6 +1,38 @@
 .profile {
+  position: fixed;
   background: var(--background);
   color: var(--title);
   width: 300px;
   height: 50px;
+}
+
+.userPicture {
+  position: absolute;
+  background-color: rgba(173, 173, 173, 0.4);
+  height: 35px;
+  border-radius: 50%;
+  top: 15%;
+  left: 5%;
+}
+
+.boxUserName {
+  position: absolute;
+  height: 20px;
+  width: 170px;
+  top: 30%;
+  left: 70px;
+  text-align: Left;
+}
+
+.userName {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.searchLists {
+  position: relative;
+  height: 35px;
+  top: 15%;
+  left: 85%;
 }
