--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -5,9 +5,10 @@
 }
 
 :root {
-  --primary: #b5b0ed;
-  --secondary: #d9d3ff;
+  --primary : #b5b0ed;
+  --secondary : #d9d3ff;
   --darkpurple: #777ace;
   --background: #fff;
+  --white: #fff;
   --title: #1f1f1f;
 }
