--- a/src/styles/components/ListHeader.css
+++ b/src/styles/components/ListHeader.css
@@ -1,8 +1,46 @@
 .listHeader {
-  background: var(--background);
-  color: var(--title);
-  position: fixed;
+  background-image: url('../../assets/images/headerBackground.jpg');
+  background-position: bottom;
+  background-size: cover;
+  color: white;
+  position: absolute;
   left: 300px;
   width: calc(100% - 300px);
   height: 25vh;
+}
+
+.listHeaderContent {
+  position: relative;
+  top: 13vh;
+  width: 200px;
+}
+
+.listHeaderContent h2 {
+  font-size: 2.8rem;
+  text-align: left;
+  margin-left: 22px;
+}
+
+.listHeaderContent p {
+  font-size: 1.2rem;
+  
+  text-align: left;
+  margin-left: 22px;
+  font-weight: bold;
+}
+
+.night-mode-image {
+  float: right;
+  align-items: center;
+}
+
+.night-mode-image a {
+  position: relative;
+  top: 9vh;
+  margin-right: 22px;
+}
+
+.night-mode-image img {
+  width: 30px;
+  height: 30px;
 }
