--- a/src/components/AddNewToDo/styles.css
+++ b/src/components/AddNewToDo/styles.css
@@ -75,7 +75,7 @@
   padding: 1rem .4rem;
   border-radius: 0.2rem;
   /* background-color: #e8d2e4; */
-  background-color: #f9ecf6;
+  background-color: var(--pink-50);
   border: none;
   display: block;
   border-bottom: 0.3rem solid transparent;
@@ -91,7 +91,7 @@
 	/* margin: 0 auto; */
   padding: .2rem .4rem;
   border-radius: 0.2rem;
-  background-color: #f9ecf6;
+  background-color: var(--pink-50);
   border: none;
   display: block;
   border-bottom: 0.3rem solid transparent;
