--- a/src/components/ListHeader/styles.css
+++ b/src/components/ListHeader/styles.css
@@ -36,11 +36,51 @@
 
 .night-mode-image a {
   position: relative;
-  top: 9vh;
+  top: 80px;
   margin-right: 22px;
 }
 
 .night-mode-image img {
   width: 30px;
   height: 30px;
+}
+
+.resposiveSideBarIcon {
+  display: none;
+
+  cursor: pointer;
+ 
+  height: 25px;
+  width: 25px;
+
+  margin-left: 22px;
+  margin-top: 22px;
+
+  transition: 0.2s;
+}
+
+@media screen and (max-width: 800px) {
+  
+  .listHeader {
+    left: 0;
+    width: 100%;
+  }
+  
+  .listHeaderContent {
+    top: 80px;
+  }
+
+  .night-mode-image a {
+    top: -23px;
+  }
+  
+  .resposiveSideBarIcon {
+    display: inline;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .listHeaderContent {
+    top: 10px;
+  }
 }
