--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -2,13 +2,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* font-family: "Poppins", sans-serif; */
 }
 
 :root {
   --primary : #b5b0ed;
   --secondary : #d9d3ff;
   --darkpurple: #777ace;
+
+  --pink-50 : #f9ecf6;
+
   --background: #fff;
   --white: #fff;
   --title: #1f1f1f;
 }
+
